# namespaced

./: .env.example  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
src/: admin.rs  api.rs  config.rs  error.rs  main.rs  manager.rs
