[package]
name = "namespaced"
version = "1.0.0"
edition = "2024"
description = ""
license = "MIT"
repository = "https://github.com/canmi21/namespaced"
readme = "README.md"
keywords = ["namespaced", "server", "config", "api", "database"]
categories = ["network-programming", "web-programming", "development-tools"]

[[bin]]
name = "namespaced"
path = "src/main.rs"

[dependencies]
dotenvy = "0.15"
fancy-log = "0.1"
lazy-motd = "1"