[package]
name = "namespaced"
version = "1.0.5"
edition = "2024"
description = "A modern, API-driven configuration registry for the modern developer."
license = "MIT"
repository = "https://github.com/canmi21/namespaced"
readme = "README.md"
keywords = ["namespaced", "server", "config", "api", "database"]
categories = ["network-programming", "web-programming", "development-tools"]

[[bin]]
name = "namespaced"
path = "src/main.rs"

[dependencies]
axum = "0.8"
dashmap = "6"
dotenvy = "0.15"
fancy-log = "0.1"
http = "1"
lazy-motd = "1"
notify = "8"
pathmap = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }